# group-knowledge

./: .gitignore  README.md
chat_client/: .classpath  CMakeLists.txt  mainpage.dox  manifest.xml
chat_client/doc/tests/: tests.tex
chat_client/src/java/org/knowrob/tutorials/chat/: ChatClient.java  JSONPrologTestClient.java
livingroom_map/: CMakeLists.txt  mainpage.dox  manifest.xml
livingroom_map/prolog/: init.pl.in
